--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
 
     - name: Install dependencies
-      run: python -m pip install -U jupyterlab~=3.2 check-manifest
+      run: python -m pip install -U jupyterlab~=3.2 check-manifest 'jupyter_packaging~=0.10,<2'
 
     - name: Build the extension
       run: |
